// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Venue actions action to set the showMap 1`] = `
{
  "payload": {
    "showMap": false,
  },
  "type": "@@MT/EVENTS/SET_VENUE_MAP",
}
`;

exports[`[STORE] - Venue actions action to set the showMap 2`] = `
{
  "payload": {
    "showMap": true,
  },
  "type": "@@MT/EVENTS/SET_VENUE_MAP",
}
`;

exports[`[STORE] - Venue actions action to set the showMapLink 1`] = `
{
  "payload": {
    "showMapLink": true,
  },
  "type": "@@MT/EVENTS/SET_VENUE_MAP_LINK",
}
`;

exports[`[STORE] - Venue actions action to set the showMapLink 2`] = `
{
  "payload": {
    "showMapLink": false,
  },
  "type": "@@MT/EVENTS/SET_VENUE_MAP_LINK",
}
`;

exports[`[STORE] - Venue actions action to set the venue 1`] = `
{
  "payload": {
    "venue": 99,
  },
  "type": "@@MT/EVENTS/SET_VENUE",
}
`;

exports[`[STORE] - Venue actions action to set the venue removal 1`] = `
{
  "payload": {
    "venue": 0,
  },
  "type": "@@MT/EVENTS/SET_VENUE",
}
`;
